[release] v0.22.2
